--- a/html檔/LookBook.html
+++ b/html檔/LookBook.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Vesluneir，相冊</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -591,12 +591,12 @@
         <nav id="nav" class="container">
             <ul id="navbox">
                 <li>
-                    <a href="Home copy 4.html">VESLUNEIR</a>
+                    <a href="Home.html">VESLUNEIR 找攝影</a>
                     <hr>
                     <p>首頁</p>
                 </li>
                 <li>
-                    <a href="Photographer copy 2.html">PHOTOGRAPHER</a>
+                    <a href="Photographer.html">PHOTOGRAPHER</a>
                     <hr>
                     <p>攝影師一覽</p>
                 </li>
@@ -606,19 +606,19 @@
                     <p>相簿</p>
                 </li>
                 <li>
-                    <a href="Article.html">ARTICLE</a>
+                    <a href="#">ARTICLE</a>
                     <hr>
                     <p>文章專區</p>
                 </li>
                 <li class="dropdown">
-                    <a href="Login.html" class="arrow_r_b2 dropdown-toggle">LOGIN</a>
+                    <a href="#" class="arrow_r_b2 dropdown-toggle">LOGIN</a>
                     <hr>
                     <p>註冊／登入</p>
                     <ul class="dropdown-menu">
-                        <li><a href="Login.html">登入</a></li>
-                        <li><a href="Register.html">註冊</a></li>
-                        <li><a href="ForgotPassword.html">忘記密碼</a></li>
-                        <li><a href="AccountSettings.html">帳戶設定</a></li>
+                        <li><a href="#">登入</a></li>
+                        <li><a href="#">註冊</a></li>
+                        <li><a href="#">忘記密碼</a></li>
+                        <li><a href="#">帳戶設定</a></li>
                     </ul>
                 </li>
             </ul>
@@ -648,7 +648,7 @@
                 </div>
             </div>
             <div id="logobox">
-                <a href="Home copy 3.html">
+                <a href="Home.html">
                     <img src="/img/Vesluneir.png">
                 </a>
             </div>
